
Notations

- Record syntax "{|x=...; y=...|}" now works inside patterns too.
- Abbreviations from non-imported module now invisible at printing time.
- Abbreviations now use implicit arguments and arguments scopes for printing.
- Abbreviations to pure names now strictly behave like the name they refer to
  (make redirections of qualified names easier).
- The "where" clause now supports multiple notations per defined object.

Vernacular commands

- New command "Timeout <n> <command>." interprets a command and a timeout
  interrupts the interpretation after <n> seconds.
- Option -R now supports binding Coq root read-only.
- New support for local binders in the syntax of Record/Structure fields.
- Most commands referring to constant (e.g. Print or About) now support
  referring to the constant by a notation string.
- Added "Reserved Infix" as a specific shortcut of the corresponding
  "Reserved Notation".
- Open/Close Scope command supports Global option in sections.
- Ltac definitions support Local option for non-export outside modules.
- Made generation of boolean equality automatic for datatypes (use
  "Unset Boolean Equality Schemes" for deactivation).
- Made support for automatic generation of case analysis schemes and
  congruence schemes available to user (governed by options "Unset
  Case Analysis Schemes" and "Unset Congruence Schemes").

Tools

- New coqtop/coqc option -beautify to reformat .v files (usable
  e.g. to globally update notations).
- New tool beautify-archive to beautify a full archive of developments.
- New coqtop/coqc option -compat X.Y to simulate the general behavior
  of previous versions of Coq (provides e.g. support for 8.2 compatibility).

Coqdoc

- List have been revamped.  List depth and scope is now determined by
  an "offside" whitespace rule.
- Text may be italicized by placing it in _underscores_.
- The "--index <string>" flag changes the filename of the index.
- The "--toc-depth <int>" flag limits the depth of headers which are